--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
+# npm stuff
 node_modules
 package-lock.json
+
+# Mac 
+*.DS_Store
+
+# Elasticsearch volumes
+/docker/es01-data
+/docker/es02-data
