--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.1",
+    "https": "^1.0.0",
     "nodemon": "^3.1.7"
   },
   "type": "module"
