--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -1,3 +1,4 @@
+# In case that the instance has memory enough to run all the services
 services:
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.24
@@ -5,7 +6,8 @@ services:
     environment:
       - node.name=es01
       - cluster.name=es-docker-cluster
-      - discovery.type=single-node
+      - discovery.seed_hosts=es02
+      - cluster.initial_master_nodes=es01,es02
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms256m -Xmx256m"
     ulimits:
@@ -18,8 +20,25 @@ services:
       - 9200:9200
     networks:
       - esnet
-    mem_limit: 512m
-    restart: always
+
+  es02:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.24
+    container_name: es02
+    environment:
+      - node.name=es02
+      - cluster.name=es-docker-cluster
+      - discovery.seed_hosts=es01
+      - cluster.initial_master_nodes=es01,es02
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms256m -Xmx256m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - ./es02-data:/usr/share/elasticsearch/data
+    networks:
+      - esnet
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.17.24
@@ -32,8 +51,6 @@ services:
       - es01
     networks:
       - esnet
-    mem_limit: 256m
-    restart: always
 
   web:
     image: yobubble62/doraemon_gadgets_search_engine:amd64
@@ -44,10 +61,9 @@ services:
       - 3000:3000
     depends_on:
       - es01
+      - es02
     networks:
       - esnet
-    mem_limit: 256m # Enforce memory limit for the web service
-    restart: always
 
 networks:
   esnet:
